# third-django-team

./: .dockerignore  .gitignore  .gitmessage.txt  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test.sh
.github/workflows/: checks.yml  ci.yml
a_1/: apps.py  tests.py
accounts/: models.py  tests.py
config/settings/: base.py  dev.py  prod.py
config/urls/: dev.py  prod.py
resources/: nginx.conf
scripts/: entrypoint.sh
src/accounts/: consts.py  models.py  serializers.py  tests.py
src/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_accounts_account_type_alter_accounts_bank_code.py
src/common/: models.py
src/config/: settings.py  urls.py
src/transaction_history/: consts.py  models.py  serializers.py
src/transaction_history/migrations/: 0001_initial.py  0002_transactionhistory_delete_transactionhistorys.py
src/users/: manager.py  models.py  serializer.py  serializers.py  tests.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_users_phone_number.py  0003_alter_users_password.py  0004_alter_users_phone_number.py
src/utils/: email.py  token.py
transaction_history/: models.py  tests.py
users/: apps.py  models.py  tests.py
workflows/: cy.yml
